--- a/styles.css
+++ b/styles.css
@@ -114,3 +114,14 @@ body {
   background-color: var(--button-hover);
   color: var(--button-hover-text);
 }
+
+@media (max-width: 767px) {
+  .options-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .options-container .option-button:last-child {
+    grid-column: span 2;
+  }
+}
