--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  max-height: 100vh;
   margin: 0;
   background-color: var(--background);
   color: var(--text);
