--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
+  text-align: center;
   background-color: var(--background);
   color: var(--text);
 }
@@ -155,7 +156,8 @@ body {
 }
 
 @media (max-width: 767px) {
-  body {
+  .container {
     max-height: 100vh;
+    overflow-y: auto;
   }
 }
