--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,6 @@ body {
 
 @media (max-width: 767px) {
   .container {
-    max-height: 100vh;
-    /*overflow-y: auto;*/
+    height: auto;
   }
 }
