--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
   text-align: center;
   background-color: var(--background);
   color: var(--text);
+  overflow: hidden;
 }
 
 .options-container {
@@ -155,8 +156,8 @@ body {
   color: var(--button-hover-text);
 }
 
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
   .container {
-    height: 100%;
+    max-height: 100%;
   }
-}
+} */
