--- a/styles.css
+++ b/styles.css
@@ -155,8 +155,8 @@ body {
   color: var(--button-hover-text);
 }
 
-/* @media (max-width: 767px) {
+@media (max-width: 767px) {
   .container {
-    max-height: 100%;
+    max-height: 100vh;
   }
-} */
+}
