--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-height: 100vh;
+  height: 100vh;
   margin: 0;
   text-align: center;
   background-color: var(--background);
@@ -157,6 +157,6 @@ body {
 
 @media (max-width: 767px) {
   .container {
-    max-height: 1000px;
+    max-height: 100vh;
   }
 }
