--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    max-height: 100vh;
     overflow: hidden;
   }
 }
