--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,7 @@ body {
 
 @media (max-width: 767px) {
   .container {
+    height: 50vh;
     position: absolute;
     top: 200px;
     overflow: hidden;
