--- a/styles.css
+++ b/styles.css
@@ -161,10 +161,10 @@ body {
 
 @media (max-width: 767px) {
   body {
-    overflow: hidden;
+    /* overflow: hidden; */
   }
 
   .container {
-    max-height: 70vh;
+    max-height: 50vh;
   }
 }
