--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ body {
   font-size: 16px;
   border: none;
   border-radius: 4px;
+  height: 45px;
   cursor: pointer;
   background-color: var(--background);
   color: var(--text);
@@ -104,6 +105,27 @@ body {
 .result {
   font-size: 20px;
   margin-bottom: 20px;
+}
+
+.buttons {
+  display: flex;
+}
+
+.switch-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 0 auto;
+  background-color: var(--container);
+  color: var(--text);
+  display: none;
+}
+
+.switch-button:hover {
+  background-color: var(--button-hover);
+  color: var(--button-hover-text)
 }
 
 .next-button {
